# CIRCUIT

./: ANDGateIC.cpp  ANDGateIC.h  ANDGateIC.hpp  Breadboard.cpp  Breadboard.hpp  CMakeLists.txt  IC.cpp  IC.h  IC.hpp  Makefile  NANDGateIC.cpp  NANDGateIC.h  NANDGateIC.hpp  NORGateIC.cpp  NORGateIC.hpp  NOTGateIC.h  NOTGateIC.hpp  NOTgateIC.cpp  ORGateIC.cpp  ORGateIC.h  ORGateIC.hpp  README.md  XNORGateIC.cpp  XNORGateIC.h  XNORGateIC.hpp  XORGateIC.cpp  XORGateIC.h  XORGateIC.hpp  main.cpp
.github/workflows/: build.yml
include/: ANDGateIC.hpp  CustomExceptions.hpp  IC.hpp  NANDGateIC.hpp  NORGateIC.hpp  NOTGateIC.hpp  ORGateIC.hpp  Wire.hpp  XNORGateIC.hpp  XORGateIC.hpp
src/: ANDGateIC.cpp  IC.cpp  NANDGateIC.cpp  NORGateIC.cpp  NOTGateIC.cpp  NOTgateIC.cpp  ORGateIC.cpp  Wire.cpp  XNORGateIC.cpp  XORGateIC.cpp  main.cpp
test/: expected_output.txt  test.cpp  test_input.txt
tests/: ANDGateICTest.cpp  ICWireTest.cpp  NANDGateICTest.cpp  NORGateICTest.cpp  NOTGateICTest.cpp  ORGateICTest.cpp  XNORGateICTest.cpp  XORGateICTest.cpp  test_input.txt  test_main.cpp
